# MOE

./: .gitattributes  .gitignore  README.md  package.json  pyproject.toml
configs/: base.yaml  capped_15min.yaml  capped_15min_1y_eval.yaml  capped_15min_full_eval.yaml  capped_train.yaml  dev_fast.yaml  dev_loop.yaml  dev_quality.yaml  dev_quality_full_history.yaml  dev_quality_postfix.yaml
data/processed/: US100_m1_clean.csv  US500_m1_clean.csv
data/raw/: US100_m1_raw.csv  US500_m1_raw.csv
docs/: README.md  data_and_features.md  label_evaluation_protocol.md  labels_and_targets.md  model_stack.md  readiness_and_gaps.md  realtime_backtest_plan.md  system_overview.md  training_backtesting_live.md
reports/: backtest_comparison_latest.csv  backtest_comparison_latest.md  backtest_run_sheet.csv  data_pipeline_report.md  us100_m1_summary.json  us500_m1_summary.json
scripts/: backtest.py  dukascopy_pipeline.js  example_backtest_arrays.py  heuristic_baseline.py  label_audit_report.py  live_infer.py  precompute_backtest_arrays.py  record_backtest_run.py  train.py
src/moe_trading/: __init__.py  config.py  cost_model.py  pipeline.py
src/moe_trading/account/: __init__.py  rules.py  state.py
src/moe_trading/backtesting/: __init__.py  engine.py  realtime.py
src/moe_trading/data/: dataset.py  (+4 more)
tests/: test_account_rules.py  test_cache.py  test_cost_model_reporting.py  test_evaluation_metrics.py  test_experiment_scheduler.py  test_label_audit.py  test_label_audit_confidence.py  test_labels.py  test_model.py  test_policy.py  test_splitting.py  test_training_pipeline.py
(+153 files in other folders)
