[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-trading"
version = "0.1.0"
description = "Research-grade multi-asset mixture-of-experts trading system for US100 and US500."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "numba>=0.60",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
